--- a/src/app/shared/vote-button/vote-button.component.html
+++ b/src/app/shared/vote-button/vote-button.component.html
@@ -3,7 +3,7 @@
                   <div class="p-2">
                     <fa-icon class="upvote" [icon]="faArrowUp" ></fa-icon>
                   </div>
-                  <div class="p-2 votecount">{{post.voteCount}}</div>
+                  <div class="p-2 votecount" *ngIf="post">{{post.voteCount}}</div>
                   <div class="p-2">
                     <fa-icon class="downvote" [icon]="faArrowDown" >
                     </fa-icon>
